# careapp-chatbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: eval.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_pathway_triggers_scope_constraint.py  0003_session_checkpoints.py  0004_rate_limit_columns.py  0005_claim_version_embedding.py
apps/web/: next.config.ts  package-lock.json  proxy.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/lib/: api-client.ts
apps/web/types/: api.ts
docs/: WUNSCHLISTE.md  wunschliste-knowledge-graph.md
docs/chatbot/: HANDOVER.md  README.md  architecture-clients.md  architecture-evaluation-and-pilot.md  architecture-knowledge-and-control-core.md  architecture-llm-layers-and-threat-model.md  architecture-orchestration.md  open-decisions.md  roles.md
scripts/: backfill_embeddings.py  seed_pilot_cvs.py  semantic_search_demo.py  server_setup.sh
src/careapp/api/: app.py  auth.py  auth_admin.py  deps.py  models.py  models_admin.py
src/careapp/db/: session.py  triggers.py
src/careapp/domain/: coverage.py  eligibility.py  evidence_builder.py  validator.py
src/careapp/eval/: runner.py  types.py
src/careapp/llm/: __init__.py  anthropic_adapter.py  channels.py  composer.py  embeddings.py  (+5 more)
tests/: conftest.py
tests/api/: test_chat.py  test_citation.py
tests/db/: test_api_e2e.py  test_checkpoint.py  test_composer.py  test_constraints.py  test_eligibility.py  test_handoff.py  test_layer2.py  test_orchestration.py  test_pathway.py  test_rate_limit.py  test_threats_db.py
tests/eval/: test_golden_set.py  test_pilot_checklist.py
tests/fixtures/: synthetic_heimunterbringung.py
tests/llm/: test_channels.py  test_fallback.py  test_metering.py  test_schemas.py  test_scope_safety.py  test_threats.py
(+39 files in other folders)
